# aeogeoagent

./: .gitignore  README.md  SEO_USAGE.md  pyproject.toml
docs/: architecture.md
src/multi_agent_crew/: __init__.py  main.py
src/multi_agent_crew/agents/: __init__.py  base.py  factory.py  seo_agent.py  weather_agent.py
src/multi_agent_crew/config/: agents.yaml  tasks.yaml
src/multi_agent_crew/core/: config.py  exceptions.py  utils.py
src/multi_agent_crew/core/observability/: __init__.py  base.py  factory.py  prometheus.py  system_logger.py
src/multi_agent_crew/crews/: __init__.py  base.py  seo_crew.py  weather_crew.py
src/multi_agent_crew/tasks/seo/: tasks.py
src/multi_agent_crew/tasks/weather/: tasks.py
src/multi_agent_crew/tools/: __init__.py  gsc_tool.py  keyword_search_tool.py  weather_tool.py
src/multi_agent_crew/tools/base/: cached_tool.py
src/multi_agent_crew/tools/data/: gsc_tool.py  weather_tool.py
src/multi_agent_crew/tools/search/: keyword_search_tool.py
tests/: conftest.py  test_crew.py  test_main.py  test_weather_tool.py
weather_crew/: README.md  pyproject.toml
weather_crew/src/weather_crew/: __init__.py  crew.py
weather_crew/src/weather_crew/config/: agents.yaml  tasks.yaml
weather_crew/src/weather_crew/tools/: __init__.py
weather_crew/tests/: test_main.py  test_weather_tool.py
